inject service to card-info and fix styles.css

--- a/src/app/dashboard/components/nav/nav.component.html
+++ b/src/app/dashboard/components/nav/nav.component.html
@@ -1,1 +1,16 @@
-<p>nav works!</p>
+<article>
+  <section>
+    <img src="image-jeremy.png" alt="Jeremy Robson" />
+    <div>
+      <p>Report for</p>
+      <p>Jeremy Robson</p>
+    </div>
+  </section>
+  <section>
+    <ul>
+      <li><a href=""></a>Daily</li>
+      <li><a href=""></a>Weekly</li>
+      <li><a href=""></a>Monthly</li>
+    </ul>
+  </section>
+</article>
