add nav styles for mobile

--- a/src/app/dashboard/components/nav/nav.component.html
+++ b/src/app/dashboard/components/nav/nav.component.html
@@ -1,16 +1,16 @@
-<article>
-  <section>
-    <img src="image-jeremy.png" alt="Jeremy Robson" />
-    <div>
-      <p>Report for</p>
-      <p>Jeremy Robson</p>
+<article class="nav__container">
+  <section class="nav__user">
+    <img class="nav__user__img" src="image-jeremy.png" alt="Jeremy Robson" />
+    <div class="nav__user__text">
+      <p class="nav__user__report">Report for</p>
+      <p class="nav__user__name">Jeremy Robson</p>
     </div>
   </section>
-  <section>
-    <ul>
-      <li><a href=""></a>Daily</li>
-      <li><a href=""></a>Weekly</li>
-      <li><a href=""></a>Monthly</li>
+  <section class="nav__timeframe">
+    <ul class="nav__timeframe__list">
+      <li class="nav__timeframe__li"><a href=""></a>Daily</li>
+      <li class="nav__timeframe__li"><a href=""></a>Weekly</li>
+      <li class="nav__timeframe__li"><a href=""></a>Monthly</li>
     </ul>
   </section>
 </article>
