--- a/src/styles.css
+++ b/src/styles.css
@@ -4,19 +4,21 @@
 
 :root {
   /* primary */
-  --purple-600: hsl(246, 80%, 60%);
+  --white: hsl(0, 100%, 100%);
+  --black: hsl(0, 0%, 0%);
+  --grey-200: hsl(0, 0%, 85%);
 
   --orange-300: hsl(15, 100%, 70%);
   --blue-300: hsl(195, 74%, 62%);
   --pink-400: hsl(348, 100%, 68%);
   --green-400: hsl(145, 58%, 55%);
-  --purple-700: hsl(264, 64%, 52%);
   --yellow-300: hsl(43, 84%, 65%);
-
-  /* neutral */
   --navy-950: hsl(226, 43%, 10%);
   --navy-900: hsl(235, 46%, 20%);
+  --navy-800: hsl(235, 41%, 34%);
   --navy-200: hsl(236, 100%, 87%);
+  --purple-700: hsl(264, 64%, 52%);
+  --purple-600: hsl(246, 80%, 60%);
   --purple-500: hsl(235, 45%, 61%);
 }
 
