change dashboard component structure

--- a/src/app/dashboard/components/info-card/info-card.component.html
+++ b/src/app/dashboard/components/info-card/info-card.component.html
@@ -1,5 +1,5 @@
-@for (activity of trackingData; track trackingData) {
 <article class="card__container">
+  <div class="card__header"></div>
   <section class="card__info">
     <div>
       <p>{{ activity.title }}</p>
@@ -25,4 +25,3 @@
     </div>
   </section>
 </article>
-}
