--- a/src/app/dashboard/components/info-card/info-card.component.css
+++ b/src/app/dashboard/components/info-card/info-card.component.css
@@ -1,9 +1,20 @@
 .card__container {
-  border-radius: 15px;
-  overflow: hidden;
-  max-width: 600px;
   display: flex;
   flex-direction: column;
+  border-radius: 15px;
+  max-width: 350px;
+  width: 100%;
+  position: relative;
+}
+
+.card__header {
+  height: 3rem;
+  background-color: orange;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  top: -34px;
+  border-radius: 15px 15px 0px 0px;
 }
 
 .card__info {
@@ -14,4 +25,7 @@
   padding: 24px;
   background-color: var(--navy-900);
   width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+  z-index: 1;
 }
