--- a/src/app/dashboard/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: calc(100% - 20px);
+  max-width: 600px;
   color: white;
   display: flex;
   flex-direction: column;
@@ -8,4 +8,15 @@
   margin-top: 4rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+.container--info {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  margin-top: 4rem;
+}
+
+.container section {
+  width: 100%;
 }
