--- a/src/app/dashboard/components/info-card/info-card.component.html
+++ b/src/app/dashboard/components/info-card/info-card.component.html
@@ -1,5 +1,5 @@
 <article class="card__container">
-  <div class="card__header"></div>
+  <div class="card__header" [class]="activity.title.toLowerCase()"></div>
   <section class="card__info">
     <div>
       <p>{{ activity.title }}</p>
