--- a/src/app/dashboard/components/info-card/info-card.component.html
+++ b/src/app/dashboard/components/info-card/info-card.component.html
@@ -1,11 +1,11 @@
 <article class="card__container">
   <div class="card__header" [class]="activity.title.toLowerCase()"></div>
   <section class="card__info">
-    <div>
+    <div class="card__container__col">
       <p>{{ activity.title }}</p>
       <p>{{ activity.timeframes[selectedTimeframe].current }}hrs</p>
     </div>
-    <div>
+    <div class="card__container__col">
       <a href="">...</a>
       <p>
         Last
