--- a/src/app/dashboard/components/nav/nav.component.css
+++ b/src/app/dashboard/components/nav/nav.component.css
@@ -42,6 +42,7 @@
   font-weight: 200;
   letter-spacing: 1px;
   font-size: 1.5rem;
+  white-space: nowrap;
 }
 
 /* timeframe  */
@@ -58,5 +59,9 @@
 .nav__timeframe__li:hover,
 .nav__timeframe__li:focus {
   cursor: pointer;
+  color: var(--white);
+}
+
+.active {
   color: var(--white);
 }
