--- a/src/app/dashboard/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard/dashboard.component.css
@@ -1,13 +1,8 @@
 .container {
-  max-width: 600px;
+  max-width: 100%;
+  width: calc(100% - 10px);
   color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 4rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 .container--info {
