add logo header to info cards

--- a/src/app/dashboard/components/info-card/info-card.component.css
+++ b/src/app/dashboard/components/info-card/info-card.component.css
@@ -17,6 +17,13 @@
   border-radius: 15px 15px 0px 0px;
 }
 
+.card__header__icon {
+  position: absolute;
+  top: 0px;
+  right: 20px;
+  width: 60px;
+}
+
 .work {
   background-color: var(--orange-300);
 }
