add desktop view

--- a/src/app/dashboard/components/info-card/info-card.component.css
+++ b/src/app/dashboard/components/info-card/info-card.component.css
@@ -113,3 +113,13 @@
     right: -30px;
   }
 }
+
+@media (min-width: 1240px) {
+  .card__info__current {
+    font-size: 3rem;
+  }
+
+  .card__info__menu {
+    right: -80px;
+  }
+}
